<resources>
    <string name="app_name">WatchApplication</string>
    <string name="button_register">Register</string>
    <string name="enter_name">Name</string>
    <string name="enter_userName">Username</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_age">Age</string>
    <string name="button_login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="userName">Username:</string>
    <string name="Welcome">Welcome  </string>
    <string name="select_age">Select your age </string>
    <string name="register_shows_header">In order to customize your profile better, please select your preferred TV shows…or</string>
    <string name="Continue">Continue</string>
    <string name="skip">Skip</string>
    <string name="app_label">WatchApplication</string>
    <string name="search_hint">Search TV shows</string>
    <string name="welcome">Welcome </string>
    <string name="trending_shows">Trending shows right now</string>
    <string name="add_watch_list">Add to Watch-List</string>
    <string name="see_more">See more</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_to_to_watch_list">Add to To-Watch list</string>
    <string name="add_to_watching_list">Add to Watching-Now list</string>
    <string name="add_to_watched_list">Add to Watched List</string>
    <string name="num_seasons">Number of seasons: </string>
    <string name="refresh">Resfresh</string>
    <string name="stop">Stop</string>
    <string name="name_app">Watch App</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_account">Your account</string>
    <string name="name">Name:</string>
    <string name="user_name">Username:</string>
    <string name="age">Age:</string>
    <string name="to_watch_list">To-Watch List</string>
    <string name="watching_now_list">Watching-Now List</string>
    <string name="watched_list">Watched List</string>
    <string name="your">Your</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_origin_country">Show origin country</string>
    <string name="channel_description">New episode</string>
    <string name="channel_name">Watch Application</string>
</resources>
