<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_userName"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/et_Name" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        app:layout_constraintTop_toBottomOf="@+id/et_UserName">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_PasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/et_Password">
        <requestFocus />
    </EditText>
    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_age"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_PasswordAgain"/>
    <Spinner
        android:id="@+id/age_Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/enter_age"
        app:layout_constraintTop_toBottomOf="@+id/et_PasswordAgain"
        app:layout_constraintLeft_toRightOf="@+id/txtAge">
    </Spinner>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAge">

    </Button>

     <TextView
         android:id="@+id/textV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/register_btn"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>