<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">


    <EditText
        android:id="@+id/et_UserNameLogin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/enter_userName">
    </EditText>

    <EditText
        android:id="@+id/et_PasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        app:layout_constraintTop_toBottomOf="@+id/et_UserNameLogin">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        app:layout_constraintTop_toBottomOf="@+id/et_PasswordLogin">

    </Button>

    <TextView
        android:id="@+id/linkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        android:text="@string/register_here"/>






</android.support.constraint.ConstraintLayout>