<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtViewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:paddingTop="@dimen/padding_size"
        android:text="@string/your_account" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/text_size"
        android:paddingTop="@dimen/padding_size"
        android:layout_below="@id/txtViewAccount" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="@dimen/text_size"
        android:paddingTop="@dimen/padding_size"
        android:layout_below="@+id/txtName"  />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="@dimen/text_size"
        android:paddingTop="@dimen/padding_size"
        android:layout_below="@+id/txtUserName"
         />

    <EditText
        android:id="@+id/editTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtName"
        android:layout_toLeftOf="@+id/txtName"
        android:layout_toEndOf="@+id/txtName"
        android:background="@color/black"
        android:paddingTop="@dimen/padding_size"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/text_size" />

    </LinearLayout>


</RelativeLayout>