<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/lightGray">
    <!--
    GridView with 3 value for numColumns attribute
    -->
    <!-- HEADER -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray"
        android:gravity="center">

        <TextView
            android:id="@+id/textExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/register_shows_header"
            android:textColor="@color/black"
            android:textSize="18sp" />
  <!-- TODO change the height and width of Button -->
        <Button
            android:id="@+id/skip_btn"
            android:layout_width="76dp"
            android:layout_height="38dp"
            android:layout_alignEnd="@+id/textExplain"
            android:layout_alignBottom="@+id/textExplain"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="0dp"
            android:text="@string/skip"
            android:onClick="onClickSkip"/>

    </RelativeLayout>
    <!--
    GridView with 3 value for numColumns attribute
    -->
  <!-- TODO change the height of GridView -->
    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:footerDividersEnabled="false"
        android:numColumns="3"
        android:padding="3dp" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray"
        android:text="@string/Continue"
        android:onClick="onClickContinue"/>


</LinearLayout>
