<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_user_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout" />
        </LinearLayout>



            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Activities.UserAreaActivity"
                android:background="@color/darkGray"
                android:padding="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:paddingBottom="15dp"
                    android:textStyle="italic"
                    >
                </TextView>

                <TextView
                    android:id="@+id/trendingShows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="20dp"
                    android:padding="5dp"
                    android:text="@string/trending_shows"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_size"
                    app:layout_constraintTop_toBottomOf="@+id/trendingShows">

                </android.support.v7.widget.RecyclerView>

                <Button
                    android:id="@+id/buttonToWatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_watch_list"
                    android:layout_marginTop="@dimen/padding_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewHorizontal" />
                <Button
                    android:id="@+id/buttonWatchingNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/watching_now_list"
                    app:layout_constraintTop_toBottomOf="@+id/buttonToWatch"/>
                <Button
                    android:id="@+id/buttonAlreadyWatched"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/watched_list"
                    app:layout_constraintTop_toBottomOf="@+id/buttonWatchingNow"/>

                  <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                      android:id="@+id/calendar"
                      android:layout_width="0dp"
                      android:layout_height="370dp"
                      app:datePicker="true"
                      app:headerColor="@color/colorPrimary"
                      app:selectionColor="@color/colorAccent"
                      app:todayLabelColor="@color/colorPrimaryDark"
                      app:layout_constraintTop_toBottomOf="@id/buttonAlreadyWatched"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"/>

            </android.support.constraint.ConstraintLayout>

    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/navigation_view">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>